support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_extend_redefine.i
%module xxx

%extend foo {
    int bar() {
    }
};

struct foo {
    int bar();
    int spam();
};

%extend foo {
    int spam();
};


   





